SERVER-11419 clientcursors are no longer deleted out from underneath holder